--- a/CSS/index.css
+++ b/CSS/index.css
@@ -239,8 +239,9 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    width: 650px;
-                    height: 275px;
+                    width: calc(100vw - 55%);
+                    max-height: calc(100vw - 15%);
+                    aspect-ratio: 2 / 1;
                     border-radius: 10px;
 
                     background-color: #F2FFEA;
@@ -251,8 +252,8 @@ body::before, body::after {
                     
         
                     h2 {
-                        margin-top: 50px;
-                        font-size: clamp(15px, 3vw, 25px);                       
+                        margin-top: clamp(10px, 5vh, 50px);
+                        font-size: clamp(10px, 2vw, 25px);                       
 
                         font-family: "Libre Bodoni", serif;
                         font-weight: normal;
@@ -260,7 +261,7 @@ body::before, body::after {
                     }
 
                     h3 {
-                        font-size: clamp(20px, 5vw, 50px);                       
+                        font-size: clamp(15px, 3vw, 50px);                       
                         margin-top: -5px;
 
                         font-family: "Libre Bodoni", serif;
