--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -253,3 +253,56 @@ body::before, body::after {
     }
 
 }
+
+@media (max-width: 1300px){
+    .main-content {
+    
+        .un-scroll-content {
+    
+            width: 250px;
+
+            .right-s-content {
+        
+                .right-s-background {
+        
+                    .right-s-box {
+                        width: 225px;
+        
+                        .right-s-text {
+                            width: 180px;
+    
+                            h2 {
+                                font-size: 20px;
+                            }
+    
+                            img {
+                                width: 102px;
+                                height: 130px;
+                            }
+        
+                            p {
+                                margin-left: 5px;
+                                margin-right: 5px;
+                                font-size: 13px;
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+    
+    }
+}
+
+@media (max-width: 1100px){
+
+    .main-content {
+
+        .un-scroll-content {
+            display: none;
+        }
+
+    
+    }
+}
