--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -366,7 +366,7 @@ body::before, body::after {
                     opacity: 75%;
                     font-size: clamp(7px, calc(0.7vw + 0.4vh), 18px);
 
-                    margin-top: calc(12% + 10px);
+                    margin-top: calc(10% + 10px);
                     margin-bottom: 2.5px;
                 }
 
@@ -412,6 +412,36 @@ body::before, body::after {
             }
     
         }
+
+
+        /*CSS .loader comes from: "https://css-loaders.com/dots/", number #5*/
+        .loader {
+            display: block;
+
+            width: 15px;
+            aspect-ratio: 1;
+            border-radius: 50%;
+            animation: l5 1s infinite linear alternate;
+          }
+          
+          @keyframes l5 {
+            0% {
+              box-shadow: 20px 0 #000, -20px 0 #0002;
+              background: #000;
+            }
+            33% {
+              box-shadow: 20px 0 #000, -20px 0 #0002;
+              background: #0002;
+            }
+            66% {
+              box-shadow: 20px 0 #0002, -20px 0 #000;
+              background: #0002;
+            }
+            100% {
+              box-shadow: 20px 0 #0002, -20px 0 #000;
+              background: #000;
+            }
+          }
     }
 
 }
