--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -364,7 +364,7 @@ body::before, body::after {
                 .published {
                     position: absolute;
                     opacity: 75%;
-                    font-size: clamp(7px, calc(0.7vw + 0.4vh), 18px);
+                    font-size: clamp(7px, calc(0.7vw + 0.4vh), 15px);
 
                     margin-top: calc(10% + 10px);
                     margin-bottom: 2.5px;
@@ -416,32 +416,23 @@ body::before, body::after {
 
         /*CSS .loader comes from: "https://css-loaders.com/dots/", number #5*/
         .loader {
-            display: block;
-
-            width: 15px;
-            aspect-ratio: 1;
-            border-radius: 50%;
-            animation: l5 1s infinite linear alternate;
-          }
-          
-          @keyframes l5 {
-            0% {
-              box-shadow: 20px 0 #000, -20px 0 #0002;
-              background: #000;
-            }
-            33% {
-              box-shadow: 20px 0 #000, -20px 0 #0002;
-              background: #0002;
-            }
-            66% {
-              box-shadow: 20px 0 #0002, -20px 0 #000;
-              background: #0002;
-            }
-            100% {
-              box-shadow: 20px 0 #0002, -20px 0 #000;
-              background: #000;
-            }
-          }
+            margin-top: 50px;
+            width: 60px;
+            aspect-ratio: 4;
+            --_g: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
+            background: 
+                var(--_g) 0% 50%,
+                var(--_g) 50% 50%,
+                var(--_g) 100% 50%;
+            background-size: calc(100% / 3) 100%;
+            animation: l7 1s infinite linear;
+        }
+        
+        @keyframes l7 {
+            33% { background-size: calc(100% / 3) 0%, calc(100% / 3) 100%, calc(100% / 3) 100%; }
+            50% { background-size: calc(100% / 3) 100%, calc(100% / 3) 0%, calc(100% / 3) 100%; }
+            66% { background-size: calc(100% / 3) 100%, calc(100% / 3) 100%, calc(100% / 3) 0%; }
+        }
     }
 
 }
