--- a/CSS/index.css
+++ b/CSS/index.css
@@ -304,103 +304,116 @@ body::before, body::after {
     font-family: "Libre Bodoni", serif;
 
     .un-scroll-content {
-
         overflow-x: hidden;
         overflow-y: hidden;
-    
         height: 100vh;
         position: sticky;
+
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
         top: 0;
         right: 0;
-
         width: 300px;
+
         background-color: #d5eac7;
-    
+        transition: transform 0.3s ease;
+
         .right-s-content {
-    
             width: 100%;
             height: 100vh;
             position: sticky;
+    
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+        }
+        
+        .right-s-background {
+            background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+            background-size: 40%;
+            padding-bottom: 70px;
+            margin-top: -25px;
     
-            .right-s-background {
+            width: 100%;
+            height: 100%;
+    
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-                background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-                background-size: 40%;
-                padding-bottom: 70px;
-                margin-top: -25px;
-                width: 100%;
-                height: 100%;
-
+            .right-s-box {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
+        
+                width: 225px;
+                margin-top: 0px;
     
-                .right-s-box {
+                .right-s-text {
+                    margin-top: 125px;
+                    background-color: #F2FFEA;
+            
                     display: flex;
                     flex-direction: column;
-                    justify-content: center;
                     align-items: center;
+                    justify-content: center;
+            
+                    border-radius: 10px;
                     width: 225px;
+            
+                    font-family: "Libre Bodoni", serif;
+                    font-weight: normal;
+            
+                    color: #162D06;
 
-                    margin-top: 0px;
-    
-                    .right-s-text {
-                        margin-top: 125px;
-                        background-color: #F2FFEA;
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        justify-content: center;
-
-                        border-radius: 10px;
-                        width: 225px;
-
-                        font-family: "Libre Bodoni", serif;
-                        font-weight: normal;
-
-                        color: #162D06;
-
-                        h2 {
-                            font-size: 22px;
-                        }
-
-                        img {
-                            width: 129px;
-                            height: 163px;
-                            object-fit: contain;
-                            background-color: white;
-                            border-radius: 99px;
-                        }
-    
-                        p {
-                            margin-bottom: 0px;
-                            margin-top: 10px;
-                            margin-left: 10px;
-                            margin-right: 10px;
-                            font-size: 13px;
-                        }
-    
-                        .right-s-info {
-                            width: 100%;
-                            padding-bottom: 25px;
-                            margin-top: 50px;
-    
-                            span {
-                                font-weight: bold;
-                            }
-                        }
+                    h2 {
+                        font-size: 22px;
                     }
+                    
+                    img {
+                        width: 129px;
+                        height: 163px;
+                        object-fit: contain;
+                        background-color: white;
+                
+                        border-radius: 99px;
+                    }
+                    
+                    p {
+                        margin-bottom: 0px;
+                        margin-top: 10px;
+                        margin-left: 10px;
+                        margin-right: 10px;
+                
+                        font-size: 13px;
+                    }
+                }
+                
+                .right-s-info {
+                    width: 100%;
+                    padding-bottom: 25px;
+                    margin-top: 50px;
+
+                    span {
+                        font-weight: bold;
+                    }
+                }
+                
+                .toggle-icon {
+                    display: none; 
                 }
             }
         }
+        
+    }
+
+    .un-scroll-content-active {
+        transform: translateX(0);
     }
 
     .scroll-content {
@@ -816,7 +829,33 @@ body::before, body::after {
     .main-content {
 
         .un-scroll-content {
-            display: none;
+            transform: translateX(100%); 
+            transition: right 0.3s ease;
+        }
+
+        .un-scroll-content-active {
+            transform: translateX(0);
+        }
+
+        .toggle-icon {
+            display: block;
+            position: fixed;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #d5eac7;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 1000;
+
+            height: 30px;
+            width: 30px;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            margin-right: 10px;
         }
     
         .scroll-content {
