--- a/CSS/index.css
+++ b/CSS/index.css
@@ -288,13 +288,14 @@ body::before, body::after {
 
     z-index: 2;
     margin-top: 100vh;
+    width: 100%;
+
     box-shadow: 10px 1px 50px 5px rgba(1, 56, 10, 0.396);
 
     background-color: #F2FFEA;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
 
     position: relative;
 
@@ -305,6 +306,8 @@ body::before, body::after {
         overflow-y: hidden;
         height: 100vh;
         position: sticky;
+
+        z-index: 3;
 
         display: flex;
         flex-direction: column;
@@ -320,7 +323,7 @@ body::before, body::after {
 
         .right-s-content {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             position: sticky;
     
             display: flex;
@@ -407,23 +410,45 @@ body::before, body::after {
     }
 
     .toggle-icon {
-        display: none; 
+        position: fixed;
+        right: 0;
+        top: 50%;
+
+        transform: translateY(-50%);
+
+        background-color: #d5eac7;
+        color: #162D06;
+        border-radius: 50% 0% 0% 50%;
+        cursor: pointer;
+
+        height: 25px;
+        width: 25px;
+
+        display: none;
+        z-index: 2;
     }
 
     .un-scroll-content-active {
         transform: translateX(0);
         transition: right 0.3s ease;
+        z-index: 3;
     }
 
     .scroll-content {
         position: relative;
+        z-index: 2;
 
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        top: 0;
+        right: 0;
         width: 100%;
+
         margin-bottom: 150px;
+        margin: 0 auto;
 
         .newly-posted-container {
 
@@ -588,6 +613,7 @@ body::before, body::after {
 
             font-family: "Libre Bodoni", serif;
             font-weight: normal;
+            margin-bottom: 150px;
 
             h2 {
                 font-size: 55px;
@@ -760,6 +786,29 @@ body::before, body::after {
     }
 }
 
+
+@media (max-width: 1500px) {
+
+    .main-content {
+        .scroll-content {
+    
+            .newly-posted-container {
+        
+                .next-right-newly {
+                    right: 1%;
+                }
+        
+                .next-left-newly {
+                    left: 1%;
+                }
+        
+            }
+        
+        }
+    
+    }
+}
+
 @media (max-width: 1300px){
     .main-content {
     
@@ -801,28 +850,6 @@ body::before, body::after {
     }
 }
 
-@media (max-width: 1500px) {
-
-    .main-content {
-        .scroll-content {
-    
-            .newly-posted-container {
-        
-                .next-right-newly {
-                    right: 1%;
-                }
-        
-                .next-left-newly {
-                    left: 1%;
-                }
-        
-            }
-        
-        }
-    
-    }
-}
-
 @media (max-width: 1100px){
 
     .main-content {
@@ -838,25 +865,15 @@ body::before, body::after {
         }
 
         .toggle-icon {
-            display: block;
-            position: fixed;
-            right: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: #d5eac7;
-            border-radius: 50% 0% 0% 50%;
-            cursor: pointer;
-
-            height: 25px;
-            width: 25px;
-
             display: flex;
             justify-content: center;
             align-items: center;
-
         }
     
         .scroll-content {
+
+            width: 100%;
+
     
             .newly-posted-container {
         
