--- a/CSS/header.css
+++ b/CSS/header.css
@@ -26,7 +26,7 @@ nav {
 
     font-family: "libre Bodoni", serif;
 
-    font-size: 15px;
+    font-size: clamp(13px, 2.5vw, 15px);
 
     .nav-links-top {
         display: flex;
@@ -236,7 +236,91 @@ nav {
 
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
+    
+    nav {    
+        margin-left: 5%;
+        margin-right: 5%;
+                
+        .searchbar-header {
+        
+            width: 275px;
+        
+            .searchbar-header-content {
+    
+                i {
+                    height: 24px;
+                    width: 30px;
+                }
+            }
+    
+            input {
+                width: 275px;
+                height: 22px;
+            }
+    
+            .search-results {
+                width: 310px;
+                max-height: 310px;
+                margin-left: -18px;
+            }
+            
+            .search-results h2 {
+                font-size: 10px;
+            }
+            
+            
+            #searchInput::placeholder {
+                font-size: 10px;
+            }
+
+    
+        }
+    
+    
+        .logo {
+            width: 110px;
+            height: 76px;
+    
+            img {
+                width: 110px;
+                height: 76px;
+            }
+        }
+    
+        .nav-links {
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            text-align: center;
+    
+            height: 60px;
+        }
+    
+        li {
+    
+            .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
+    
+                i {
+                    font-size: 23px;
+                }
+            }
+        }
+    
+        li:hover {
+    
+            .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
+    
+                i {
+                    font-size: 23px;
+                }
+            }
+        }
+    
+    }
+}
+
+@media screen and (max-width: 1100px) {
 
 
     nav {
@@ -261,12 +345,14 @@ nav {
             }
     
             input {
-                width: 173px;    
+                width: 173px; 
+                height: 25px;   
             }
     
             .search-results {
-                width: 209px;
+                width: 205px;
                 max-height: 500px;
+                margin-left: 0px;
             }
 
             #searchInput::placeholder {
@@ -310,7 +396,7 @@ nav {
                 justify-content: flex-start;
                 text-align: left;
     
-                font-size: 19px;
+                font-size: 15px;
         
                 a {
                     width: 250px;
@@ -326,8 +412,27 @@ nav {
                 }
             }
         }
+
         .nav-links.active {
             right: 0; 
+        }
+
+        .logo {
+            margin-top: 5px;
+        }
+
+    }
+
+}
+
+@media screen and (max-width: 850px) {
+
+
+    nav {
+
+        .menu-icon {
+
+            margin-right: 0.5%;
         }
 
     }
