--- a/CSS/Admin/admin-page.css
+++ b/CSS/Admin/admin-page.css
@@ -372,3 +372,48 @@ body::before, body::after {
     }
 
 }
+
+@media (max-width: 1100px){
+
+    .main-content {
+        
+        .un-scroll-content {
+            transform: translateX(100%); 
+            transition: transform 0.4s ease;
+            width: 250px;
+            z-index: 998;
+        }
+
+        .un-scroll-content-active {
+            transform: translateX(0%); 
+            transition: transform 0.4s ease;
+            width: 205px;
+        }
+
+        .toggle-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: 0px;
+
+            transition: right 0.1s ease;
+        }
+    
+        .scroll-content {
+    
+            .newly-posted-container {
+        
+                .next-right-newly {
+                    right: 2.5%;
+                }
+    
+                .next-left-newly {
+                    left: 2.5%;
+                }
+    
+            }
+
+        }
+    
+    }
+}
