--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -81,7 +81,8 @@ body::before, body::after {
                     flex-direction: column;
                     align-items: center;
                     width: 250px;
-                    margin-bottom: 15px;
+                    margin-bottom: 10px;
+                    margin-top: 115px;
 
                     a {
                         padding: 7px;
@@ -180,6 +181,41 @@ body::before, body::after {
                 }
             }
         }
+    }
+
+    .toggle-icon {
+        position: fixed;
+        right: 0;
+
+        top: 50%;
+        transform: translateY(-50%);
+        transition: transform 0.3s ease;
+
+        background-color: #d5eac7;
+        color: #162D06;
+        border-radius: 35% 0% 0% 35%;
+        cursor: pointer;
+
+        height: 50px;
+        padding-right: 7px;
+        padding-left: 10px;
+
+        display: none;
+        z-index: 2;
+        font-size: 20px;
+
+        &:hover {
+            transition: 0.2s ease;
+
+            padding-right: 12px;
+            background-color: #F39994;
+        }
+    }
+
+    .un-scroll-content-active {
+        transform: translateX(0);
+        transition: right 0.3s ease;
+        z-index: 3;
     }
 
     .scroll-content {
@@ -481,11 +517,44 @@ body::before, body::after {
 @media (max-width: 1100px){
 
     .main-content {
-
+        
         .un-scroll-content {
-            display: none;
+            transform: translateX(100%); 
+            transition: transform 0.4s ease;
+            width: 250px;
+            z-index: 998;
         }
 
+        .un-scroll-content-active {
+            transform: translateX(0%); 
+            transition: transform 0.4s ease;
+            width: 205px;
+        }
+
+        .toggle-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: 0px;
+
+            transition: right 0.1s ease;
+        }
+    
+        .scroll-content {
+    
+            .newly-posted-container {
+        
+                .next-right-newly {
+                    right: 2.5%;
+                }
+    
+                .next-left-newly {
+                    left: 2.5%;
+                }
+    
+            }
+
+        }
     
     }
 }
