--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -42,26 +42,35 @@ body::before, body::after {
         position: sticky;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         top: 0;
         right: 0;
-        min-width: 300px;
-        margin-right: 0px;
+
+        width: 300px;
         background-color: #d5eac7;
     
         .right-s-content {
     
+            width: 100%;
             height: 100vh;
             position: sticky;
             display: flex;
             flex-direction: column;
-            top: 0;
+            justify-content: center;
+            align-items: center;
     
             .right-s-background {
                 background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-                background-size: 40%;
+                background-size: 70%;
                 padding-bottom: 70px;
-                width: 300px;
+                width: 100%;
                 height: 100%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
 
                 .gobackbutton {
                     margin-top: 100px;
@@ -69,21 +78,22 @@ body::before, body::after {
                     flex-direction: column;
                     align-items: center;
                     width: 250px;
-                    margin-left: 25px;
-                    margin-bottom: 15px;
+                    margin-bottom: 10px;
+                    margin-top: 0px;
 
                     a {
                         padding: 7px;
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
-                        border-radius: 99px;
+                        border-radius: 25px;
 
                         color: #162D06;
                         text-decoration: none;
                         font-weight: bold;
 
                         font-size: 14px;
+                        font-family: "Libre Bodoni", serif;
 
                         i {
                             display: none;
@@ -99,7 +109,7 @@ body::before, body::after {
 
                             background-color: #a5eb77;
 
-                            background-image: linear-gradient(to bottom, rgba(62, 93, 42, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                             background-size: 200%;
 
                             color: white;
@@ -107,7 +117,6 @@ body::before, body::after {
 
                         i {
                             display: inline;
-                            margin-right: 0px;
                         }
                     }
                 }
@@ -117,15 +126,19 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    margin-top: 10px;
+                    width: 225px;
+
+                    margin-top: 0px;
     
                     .right-s-text {
                         background-color: #F2FFEA;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        justify-content: center;
+
                         border-radius: 10px;
-                        width: 250px;
+                        width: 225px;
 
                         font-family: "Libre Bodoni", serif;
                         font-weight: normal;
@@ -133,10 +146,9 @@ body::before, body::after {
                         color: #162D06;
 
                         h2 {
-                            text-align: center;
                             font-size: 22px;
                         }
-    
+
                         img {
                             width: 129px;
                             height: 163px;
@@ -147,7 +159,7 @@ body::before, body::after {
     
                         p {
                             margin-bottom: 0px;
-                            margin-top: 25px;
+                            margin-top: 10px;
                             margin-left: 10px;
                             margin-right: 10px;
                             font-size: 13px;
@@ -193,12 +205,7 @@ body::before, body::after {
                             width: 100%;
                             padding-bottom: 25px;
                             margin-top: 50px;
-                            line-height: 5px;
     
-                            #lastPosted, #totalPosts {
-                                font-weight: 400;
-                            }
-                            
                             span {
                                 font-weight: bold;
                             }
@@ -207,6 +214,41 @@ body::before, body::after {
                 }
             }
         }
+    }
+
+    .toggle-icon {
+        position: fixed;
+        right: 0;
+
+        top: 50%;
+        transform: translateY(-50%);
+        transition: transform 0.3s ease;
+
+        background-color: #d5eac7;
+        color: #162D06;
+        border-radius: 35% 0% 0% 35%;
+        cursor: pointer;
+
+        height: 50px;
+        padding-right: 7px;
+        padding-left: 10px;
+
+        display: none;
+        z-index: 2;
+        font-size: 20px;
+
+        &:hover {
+            transition: 0.2s ease;
+
+            padding-right: 12px;
+            background-color: #F39994;
+        }
+    }
+
+    .un-scroll-content-active {
+        transform: translateX(0);
+        transition: right 0.3s ease;
+        z-index: 3;
     }
 
     .scroll-content {
@@ -298,11 +340,44 @@ body::before, body::after {
 @media (max-width: 1100px){
 
     .main-content {
-
+        
         .un-scroll-content {
-            display: none;
+            transform: translateX(100%); 
+            transition: transform 0.4s ease;
+            width: 250px;
+            z-index: 998;
         }
 
+        .un-scroll-content-active {
+            transform: translateX(0%); 
+            transition: transform 0.4s ease;
+            width: 205px;
+        }
+
+        .toggle-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            right: 0px;
+
+            transition: right 0.1s ease;
+        }
+    
+        .scroll-content {
+    
+            .newly-posted-container {
+        
+                .next-right-newly {
+                    right: 2.5%;
+                }
+    
+                .next-left-newly {
+                    left: 2.5%;
+                }
+    
+            }
+
+        }
     
     }
 }
