--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -21,13 +21,16 @@ body::before, body::after {
 
 ::-webkit-scrollbar-thumb {
     background-color: #162D06;
-
     border-radius: 99px;
 }
 
 .main-content {
+
+    position:relative;
+    left: 0;
     
     background-color: #F2FFEA;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -264,18 +267,11 @@ body::before, body::after {
         justify-content: center;
         align-items: center;
         width: 100%;
+        left: 0;
+
+        position: relative;
 
         font-family: "Libre Bodoni", serif;
-
-        h1 {
-            font-size: clamp(35px, 7vw, 75px);  
-            margin-bottom: 25px;
-
-            span {
-                color: #F39994;
-                -webkit-text-stroke: 1px #162D06;
-            }
-        }
 
         .blog-detail {
 
@@ -286,6 +282,7 @@ body::before, body::after {
 
                 width: 100%;
                 margin-top: -8px;
+
                 img {
                     width: 100%;
                     height: 645px;
@@ -294,21 +291,24 @@ body::before, body::after {
 
                 .title, .content, .published {
                     margin-left: 9%;
-                    margin-right: 15%
+                    margin-right: 10%;
+
+                    color: #162D06;
+
                 }
 
                 .title {
-                    font-size: 50px;
+                    font-size: clamp(25px, 5vw, 60px);  
                     margin-bottom: 75px;
                 }
 
                 .content {
-                    font-size: 22px;
+                    font-size: clamp(14px, 3vw, 22px);  
                     margin-bottom: 100px;
                 }
 
                 .published {
-                    font-size: 20px;
+                    font-size: clamp(8px, 2vw, 17px);  
                     opacity: 75%;
                 }
             }
@@ -410,22 +410,6 @@ body::before, body::after {
             right: 0px;
 
             transition: right 0.1s ease;
-        }
-    
-        .scroll-content {
-    
-            .newly-posted-container {
-        
-                .next-right-newly {
-                    right: 2.5%;
-                }
-    
-                .next-left-newly {
-                    left: 2.5%;
-                }
-    
-            }
-
         }
     
     }
