trying new things constantly

--- a/CSS/Admin/admin-create.css
+++ b/CSS/Admin/admin-create.css
@@ -1,11 +1,15 @@
 body {
     background-color: #F2FFEA;
+    overflow-x: hidden;
+    overflow-y: scroll;
     width: 100%;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+
+    font-family: "Libre Bodoni", serif;
 
     color: #162D06;
 }
-
 .welcome-logo {
 
     background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
