--- a/CSS/Admin/admin-page.css
+++ b/CSS/Admin/admin-page.css
@@ -1,8 +1,12 @@
 body {
     background-color: #F2FFEA;
-    width: 100%;
-    min-height: 100vh;
     overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    font-family: "Libre Bodoni", serif;
 
     color: #162D06;
 }
