--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -1,7 +1,12 @@
 body {
     background-color: #F2FFEA;
-    width: 100%;
     overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    font-family: "Libre Bodoni", serif;
 
     color: #162D06;
 }
@@ -275,6 +280,7 @@ body::before, body::after {
 
         .blog-detail {
 
+            position: relative;
             width: 100%;
             margin-bottom: 150px;
 
