--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,10 +3,13 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     width: 100%;
+    margin: 0;
+    padding: 0;
+
+    font-family: "Libre Bodoni", serif;
 
     color: #162D06;
 }
-
 ::-webkit-scrollbar {
     background-color: #d5eac7;
 
@@ -35,6 +38,7 @@ body::before, body::after {
     display: flex;
     justify-content: center;
     align-items: center;
+    
     position: fixed;
 
     top: 0;
@@ -122,7 +126,7 @@ body::before, body::after {
 
             position: relative;
             height: 100vh;
-            min-width: 100%;
+            width: 100%;
 
             .background-photo {
 
@@ -134,7 +138,6 @@ body::before, body::after {
     
                 img {
                     transition: opacity 0.3s ease;
-                    min-width: 100%;
                     width: 100%;
                     height: 100vh;
                     object-fit: cover;
@@ -237,7 +240,7 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    width: calc(100vw - 55%);
+                    width: calc(100vw - 56%);
                     max-height: calc(100vw - 15%);
                     aspect-ratio: 2 / 1;
                     border-radius: 10px;
@@ -250,8 +253,11 @@ body::before, body::after {
                     
         
                     h2 {
-                        margin-top: clamp(10px, 5vh, 50px);
-                        font-size: clamp(10px, 2vw, 25px);                       
+                        margin-top: clamp(10px, 4vh, 50px);
+                        font-size: clamp(12px, 2.6vw, 25px); 
+                        text-align: center;
+                        
+                        color: #162D06;
 
                         font-family: "Libre Bodoni", serif;
                         font-weight: normal;
@@ -259,7 +265,7 @@ body::before, body::after {
                     }
 
                     h3 {
-                        font-size: clamp(15px, 3vw, 50px);                       
+                        font-size: clamp(17px, 3.5vw, 50px);                       
                         margin-top: -5px;
 
                         font-family: "Libre Bodoni", serif;
@@ -286,11 +292,14 @@ body::before, body::after {
 
 .main-content {
 
+    position: relative;
+
     z-index: 2;
     margin-top: 100vh;
     width: 100%;
     height: 100%;
     left: 0;
+    right: 0;
 
     box-shadow: 10px 1px 50px 5px rgba(1, 56, 10, 0.396);
 
@@ -298,8 +307,6 @@ body::before, body::after {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    position: relative;
 
     font-family: "Libre Bodoni", serif;
 
@@ -318,8 +325,9 @@ body::before, body::after {
 
         top: 0;
         right: 0;
-        width: 300px;
-        max-width: 300px;
+        width: 250px;
+        min-width: 250px;
+        max-width: 250px;
 
         background-color: #d5eac7;
         transition: transform 0.5s ease;
@@ -418,7 +426,6 @@ body::before, body::after {
 
         top: 50%;
         transform: translateY(-50%);
-        transition: transform 0.3s ease;
 
         background-color: #d5eac7;
         color: #162D06;
@@ -443,7 +450,6 @@ body::before, body::after {
 
     .un-scroll-content-active {
         transform: translateX(0);
-        transition: right 0.3s ease;
         z-index: 3;
     }
 
@@ -826,7 +832,9 @@ body::before, body::after {
     
         .un-scroll-content {
     
-            width: 250px;
+            width: 205px;
+            min-width: 205px;
+            max-width: 205px;
 
             .right-s-content {
         
@@ -889,6 +897,8 @@ body::before, body::after {
         }
     
         .scroll-content {
+
+            width: 100%;
     
             .newly-posted-container {
         
