--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -31,18 +31,22 @@ body::before, body::after {
 
 .main-content {
 
-    position:relative;
-    left: 0;
-    
-    background-color: #F2FFEA;
+    position: relative;
 
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+
+    background-color: #F2FFEA;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+
+    font-family: "Libre Bodoni", serif;
 
     .un-scroll-content {
-
         overflow-x: hidden;
         overflow-y: hidden;
         height: 100vh;
@@ -57,23 +61,24 @@ body::before, body::after {
 
         top: 0;
         right: 0;
-        width: 300px;
-        max-width: 300px;
+        width: 250px;
+        min-width: 250px;
 
         background-color: #d5eac7;
         transition: transform 0.5s ease;
-    
+
         .right-s-content {
     
             width: 100%;
             height: 100vh;
-            
+            position: sticky;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
     
             .right-s-background {
+
                 background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                 background-size: 40%;
                 padding-bottom: 70px;
@@ -86,48 +91,47 @@ body::before, body::after {
                 flex-direction: column;
 
                 .gobackbutton {
-                    margin-top: 100px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    width: 250px;
-                    margin-bottom: 10px;
-                    margin-top: 55px;
 
+                    width: 250px;
+                    margin-bottom: -160px;
+    
                     a {
                         padding: 7px;
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
                         border-radius: 25px;
-
+    
                         color: #162D06;
                         text-decoration: none;
                         font-weight: bold;
-
+    
                         font-size: 14px;
                         font-family: "Libre Bodoni", serif;
-
+    
                         i {
                             display: none;
                             margin-right: 7px;
                             font-size: 13px;
                         }
                     }
-
+    
                     &:hover {
                         a {
                             transform: scale(1.2);
                             transition: 0.25s;
-
+    
                             background-color: #a5eb77;
-
+    
                             background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                             background-size: 200%;
-
+    
                             color: white;
                         } 
-
+    
                         i {
                             display: inline;
                         }
@@ -139,10 +143,7 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    width: 210px;
-                    max-width: 210px;
-
-                    margin-top: 0px;
+                    margin-top: 200px;
     
                     .right-s-text {
                         background-color: #F2FFEA;
@@ -152,7 +153,7 @@ body::before, body::after {
                         justify-content: center;
 
                         border-radius: 10px;
-                        width: 100%;
+                        width: 225px;
 
                         font-family: "Libre Bodoni", serif;
                         font-weight: normal;
@@ -185,40 +186,40 @@ body::before, body::after {
                             flex-direction: column;
                             gap: 5px;
                             margin-top: 50px;
-
+                    
                             a {
                                 text-decoration: none;
                                 color: #162D06;
                                 font-weight: bold;
-
+                    
                                 margin-top: 10px;
                                 width: 165px;
                                 text-align: center;
                                 padding: 5px;
                                 border-radius: 99px;
-
+                    
                                 background-color: #9AE5B5;
                                 box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
-
+                    
                                 &:hover {
                                     transform: scale(1.1);
                                     transition: 0.25s;
-        
+                    
                                     background-color: #a5eb77;
-        
+                    
                                     background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                                     background-size: 100%;
-        
+                    
                                     color: white;
                                 }
-
+                    
                             }
                         }
     
                         .right-s-info {
                             width: 100%;
                             padding-bottom: 25px;
-                            margin-top: 150px;
+                            margin-top: 50px;
     
                             span {
                                 font-weight: bold;
@@ -228,6 +229,7 @@ body::before, body::after {
                 }
             }
         }
+        
     }
 
     .toggle-icon {
@@ -236,7 +238,6 @@ body::before, body::after {
 
         top: 50%;
         transform: translateY(-50%);
-        transition: transform 0.3s ease;
 
         background-color: #d5eac7;
         color: #162D06;
@@ -246,6 +247,7 @@ body::before, body::after {
         height: 50px;
         padding-right: 7px;
         padding-left: 10px;
+        margin-top: 25px;
 
         display: none;
         z-index: 2;
@@ -261,22 +263,26 @@ body::before, body::after {
 
     .un-scroll-content-active {
         transform: translateX(0);
-        transition: right 0.3s ease;
         z-index: 3;
     }
 
     .scroll-content {
 
+        z-index: 2;
+        position: relative;
+
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
         width: 100%;
-        left: 0;
 
-        position: relative;
+        top: 0;
+        right: 0;
 
-        font-family: "Libre Bodoni", serif;
+        margin-bottom: 150px;
+        transition: width 0.5s ease;
 
         .blog-detail {
 
@@ -348,7 +354,8 @@ body::before, body::after {
     
         .un-scroll-content {
     
-            width: 250px;
+            width: 205px;
+            min-width: 205px;
 
             .right-s-content {
         
@@ -376,10 +383,20 @@ body::before, body::after {
                             }
 
                             .redirect-link {
-    
+
+                                display: flex;
+                                flex-direction: column;
+                                gap: 5px;
+                                margin-top: 50px;
+                        
                                 a {
-                                    width: 120px;
-    
+                                    text-decoration: none;
+                                    color: #162D06;
+                                    font-weight: bold;
+                        
+                                    margin-top: 10px;
+                                    width: 105px;
+
                                 }
                             }
 
@@ -388,25 +405,35 @@ body::before, body::after {
                 }
             }
         }
-    
+
+        .scroll-content {
+            margin-bottom: 0px;
+        }
     }
 }
 
 @media (max-width: 1100px){
 
     .main-content {
-        
+
         .un-scroll-content {
             transform: translateX(100%); 
             transition: transform 0.4s ease;
-            width: 250px;
+
+            width: 205px;
+            min-width: 205px;
+
             z-index: 998;
+
+            margin-top: 0px;
+
         }
 
         .un-scroll-content-active {
             transform: translateX(0%); 
             transition: transform 0.4s ease;
             width: 205px;
+            min-width: 205px;
         }
 
         .toggle-icon {
@@ -417,6 +444,13 @@ body::before, body::after {
 
             transition: right 0.1s ease;
         }
-    
+
+        .scroll-content {
+
+            max-width: 1100px;
+            min-width: 100%;
+
+        }
+
     }
 }
